2017-11-15  Luke Shumaker  <lukeshu@parabola.nu>

	[BZ #22145]
	* sysdeps/unix/sysv/linux/ttyname.h (is_mytty): New function.
	* sysdeps/unix/sysv/linux/ttyname.c (getttyname): Call is_mytty.
	(ttyname): Likewise.
	* sysdeps/unix/sysv/linux/ttyname_r.c (getttyname_r): Likewise.
	(__ttyname_r): Likewise.

2017-11-15  Luke Shumaker  <lukeshu@parabola.nu>

	* sysdeps/unix/sysv/linux/ttyname.h (is_pty): Change return type from
	int to bool.

2017-11-15  Luke Shumaker  <lukeshu@parabola.nu>

	* sysdeps/unix/sysv/linux/ttyname.h (is_pty): Update doc reference.

2017-11-15  Luke Shumaker  <lukeshu@parabola.nu>

	* manual/terminal.texi (Is It a Terminal):
	Mention ENODEV for ttyname and ttyname_r.

2017-12-14  Florian Weimer  <fweimer@redhat.com>

	[BZ #22607]
	CVE-2017-1000409
	* elf/dl-load.c (_dl_init_paths): Compute number of components in
	the expanded path string.

2017-12-14  Florian Weimer  <fweimer@redhat.com>

	[BZ #22606]
	CVE-2017-1000408
	* elf/dl-load.c (system_dirs): Update comment.
	(nsystem_dirs_len): Use array_length.
	(_dl_init_paths): Use nsystem_dirs_len to compute the array size.

2017-11-02  Florian Weimer  <fweimer@redhat.com>

	Add array_length and array_end macros.
	* include/array_length.h: New file.

2017-10-27  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/fpu/libm-test-ulps: Regenerated for GCC 7 with
	"-O2 -march=i586".

2017-12-13  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/ia64/fpu/libm-test-ulps: Update.

2017-12-12  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #21672]
	* nptl/allocatestack.c [_STACK_GROWS_DOWN] (setup_stack_prot):
	Set to use !NEED_SEPARATE_REGISTER_STACK as well.
	(advise_stack_range): New function.
	* nptl/pthread_create.c (START_THREAD_DEFN): Move logic to mark
	stack non required to advise_stack_range at allocatestack.c

2017-12-12  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
	    Sergei Trofimovich  <slyfox@inbox.ru>

	[BZ #21908]